--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,7 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   font-size: inherit;
   color: #000;
-  background-color: #e1e1e1;
+  background-color: #c8c8c8;
 }
 
 @media (max-width: 768px) {
