--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   font-size: inherit;
   color: #000;
@@ -46,7 +46,7 @@ a.tag:hover {
 }
 
 code:not(.hljs) {
-  background-color: #f5f5f5;
+  background-color: #c8c8c8;
   border-bottom: 1px solid #ddd;
   color: #000;
   font-size: .8rem;
