--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -46,7 +46,7 @@ a.tag:hover {
 }
 
 code:not(.hljs) {
-  background-color: #c8c8c8;
+  background-color: #e2e2e2;
   border-bottom: 1px solid #ddd;
   color: #000;
   font-size: .8rem;
