--- a/layouts/partials/default_head.html
+++ b/layouts/partials/default_head.html
@@ -32,7 +32,11 @@
   <body>
 
     <header class="site">
-      <div class="title"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></div>
+      <div class="title">
+        <a href="{{ .Site.BaseURL }}">
+          <img src="{{ .Site.BaseURL }}images/Title.png">
+        </a>
+      </div>
     </header>
 
     <div class="container site">
