--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -70,10 +70,10 @@ h4 { font-size: 1rem; line-height: 1rem; }
 h5 { font-size: 1rem; line-height: 1rem; }
 
 header.site {
-  padding: 2rem 0;
+  // padding: .5rem 0;
   text-align: center;
   background-color: #fafafa;
-  margin-bottom: 2rem;
+  margin-bottom: .5rem;
 }
 
 header.site .title {
@@ -83,6 +83,11 @@ header.site .title {
 
 header.site .title a {
   text-decoration: none;
+}
+
+header.site .title img {
+  max-width: 50%;
+  height: auto;
 }
 
 footer.site {
