--- a/layouts/partials/default_head.html
+++ b/layouts/partials/default_head.html
@@ -37,6 +37,13 @@
           <img src="{{ .Site.BaseURL }}images/Title.png">
         </a>
       </div>
+
+      <div class="social">
+        <a href= "https://www.instagram.com/lib_mb/"><i class="fa fa-instagram fa-3x"></i></a>
+        <a href= "https://github.com/libmb"><i class="fa fa-github fa-3x"></i></a>
+        <a href= "https://www.pinterest.com/LibrarianMB/"><i class="fa fa-pinterest fa-3x"></i></a>
+        <a href= "https://www.facebook.com/LibrarianMB"><i class="fa fa-facebook fa-3x"></i></a>
+      </div>
     </header>
 
     <div class="container site">
