--- a/layouts/partials/default_head.html
+++ b/layouts/partials/default_head.html
@@ -38,12 +38,16 @@
         </a>
       </div>
 
-      <div class="social">
-        <a href= "https://www.instagram.com/lib_mb/"><i class="fa fa-instagram fa-3x"></i></a>
-        <a href= "https://github.com/libmb"><i class="fa fa-github fa-3x"></i></a>
-        <a href= "https://www.pinterest.com/LibrarianMB/"><i class="fa fa-pinterest fa-3x"></i></a>
-        <a href= "https://www.facebook.com/LibrarianMB"><i class="fa fa-facebook fa-3x"></i></a>
-      </div>
+      <nav>
+           <ul>
+             <li><a href="https://www.instagram.com/lib_mb/"><i class="fa fa-instagram fa-3x"></i></a></li>
+             <li><a href="https://github.com/libmb"><i class="fa fa-github fa-3x"></i></a></li>
+             <li><a href="https://www.pinterest.com/LibrarianMB/"><i class="fa fa-pinterest fa-3x"></i></a></li>
+              <li><a href="https://www.facebook.com/LibrarianMB"><i class="fa fa-facebook fa-3x"></i></a></li>
+              <li></li>
+           </ul>
+         </nav>
+
     </header>
 
     <div class="container site">
